<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:onClick="launchGameCustom">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/preset"
        android:id="@+id/preset"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preset1"
        android:id="@+id/buttonPreset1"
        android:layout_below="@+id/preset"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="launchGamePreset1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preset2"
        android:id="@+id/buttonPreset2"
        android:layout_below="@+id/buttonPreset1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="launchGamePreset2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/custom"
        android:id="@+id/custom"
        android:layout_below="@+id/blankSpace"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=" "
        android:id="@+id/blankSpace"
        android:layout_below="@+id/buttonPreset2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/inputMinValue"
        android:layout_below="@+id/custom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/min_value" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/inputMaxValue"
        android:layout_below="@+id/inputMinValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/max_value" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/buttonCustom"
        android:layout_below="@+id/inputMaxValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="launchGameCustom"
        android:nestedScrollingEnabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/legal_text"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/blankSpace"
        android:layout_toEndOf="@+id/blankSpace" />
</RelativeLayout>
